encodig variables categoricas

--- a/02-preprocesamiento.ipynb
+++ b/02-preprocesamiento.ipynb
@@ -20,6 +20,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "from scr.explore_utils import null_analysis, column_type_dataframe"
    ]
@@ -47,7 +49,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\i'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\i'\n",
-      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_10996\\676143788.py:1: SyntaxWarning: invalid escape sequence '\\i'\n",
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_14140\\676143788.py:1: SyntaxWarning: invalid escape sequence '\\i'\n",
       "  df = pd.read_csv(\"files\\input\\dataset_estudiantes.csv\")\n"
      ]
     }
@@ -250,11 +252,11 @@
     "## 3. Gestión de valores atípicos (outliers)\n",
     "Según el EDA, se detectaron outliers en las siguientes variables:\n",
     "\n",
-    "- **TASA_ASISTENCIA**: 4 outliers detectados (0.4% del total) mediante método IQR\n",
+    "- **TASA_ASISTENCIA**\n",
     "  \n",
-    "- **HORAS_ESTUDIO_SEMANAL**: Revisar valores extremos (rango 1-25 horas)\n",
+    "- **HORAS_ESTUDIO_SEMANAL**\n",
     "\n",
-    "**Implementación**: \n"
+    "- **NOTA_FINAL**:\n"
    ]
   },
   {
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "2c51e067",
    "metadata": {},
    "outputs": [
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "01191142",
    "metadata": {},
    "outputs": [
@@ -415,29 +417,416 @@
    "source": [
     "## 4. Codificación de variables categóricas (encoding)\n",
     "\n",
-    "### Plan de acción\n",
     "Según el EDA, tenemos 4 variables categóricas que requieren encoding. La estrategia dependerá de si existe un orden natural en las categorías:\n",
     "\n",
     "- **NIVEL_DIFICULTAD** (3 categorías: Fácil, Medio, Difícil):\n",
-    "  - Estrategia: **Ordinal Encoding** (Fácil=0, Medio=1, Difícil=2)\n",
-    "  - Justificación: Existe un orden lógico y el EDA muestra diferencias graduales en el rendimiento según el nivel\n",
     "  \n",
     "- **TIENE_TUTOR** (2 categorías: Sí, No):\n",
-    "  - Estrategia: **Binary Encoding** (Sí=1, No=0)\n",
-    "  - Justificación: Variable binaria simple\n",
     "  \n",
     "- **HORARIO_ESTUDIO_PREFERIDO** (3 categorías: Mañana, Tarde, Noche):\n",
-    "  - Estrategia: **One-Hot Encoding** (3 columnas binarias)\n",
-    "  - Justificación: No hay un orden natural claro entre los horarios\n",
-    "  \n",
-    "- **ESTILO_APRENDIZAJE** (4 categorías: Visual, Auditivo, Lectura/Escritura, Kinestésico):\n",
-    "  - Estrategia: **One-Hot Encoding** (4 columnas binarias)\n",
-    "  - Justificación: No hay un orden natural entre los estilos\n",
     "\n",
-    "**Implementación**: \n",
-    "- Usar `OrdinalEncoder` de scikit-learn para NIVEL_DIFICULTAD\n",
-    "- Usar `LabelEncoder` o mapeo manual para TIENE_TUTOR\n",
-    "- Usar `OneHotEncoder` o `pd.get_dummies()` para HORARIO_ESTUDIO_PREFERIDO y ESTILO_APRENDIZAJE"
+    "\n",
+    "- **ESTILO_APRENDIZAJE** (4 categorías: Visual, Auditivo, Lectura/Escritura, Kinestésico):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d05796f",
+   "metadata": {},
+   "source": [
+    "### Resumen de estrategias de encoding\n",
+    "\n",
+    "| Variable | Categorías | Método | Columnas Generadas | Justificación |\n",
+    "|----------|------------|--------|-------------------|---------------|\n",
+    "| **NIVEL_DIFICULTAD** | 3 (Fácil, Medio, Difícil) | **Ordinal Encoding** | 1 |  - Existe orden lógico natural (Fácil < Medio < Difícil)<br> - Preserva la relación ordinal sin generar columnas extras<br> - Los modelos pueden aprovechar esta jerarquía |\n",
+    "| **TIENE_TUTOR** | 2 (Sí, No) | **Binary Encoding** | 1 |  - Variable binaria simple<br> - Mapeo directo: No=0, Sí=1<br> - Más eficiente que One-Hot (evita columna redundante) |\n",
+    "| **HORARIO_ESTUDIO_PREFERIDO** | 4 (Mañana, Tarde, Noche, Desconocido) | **One-Hot Encoding** | 4 |  - No hay orden natural entre horarios<br> - Evita relaciones numéricas artificiales<br> - Solo 4 categorías (impacto moderado en dimensionalidad) |\n",
+    "| **ESTILO_APRENDIZAJE** | 4 (Visual, Auditivo, Kinestésico, Lectura/Escritura) | **One-Hot Encoding** | 4 |  - No hay jerarquía entre estilos<br> - Cada estilo es independiente e igual de válido<br> - Permite al modelo tratar cada estilo como único |\n",
+    "\n",
+    "**Total**: 4 variables categóricas → **11 columnas numéricas** (1 + 1 + 4 + 4 + 1 target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6db1b09",
+   "metadata": {},
+   "source": [
+    "### Ordinal Encoding - NIVEL_DIFICULTAD\n",
+    "\n",
+    "**Características de la variable:**\n",
+    "- **Tipo**: Categórica ordinal\n",
+    "- **Categorías**: 3 (Fácil, Medio, Difícil)\n",
+    "- **Orden lógico**: **SÍ** → Fácil < Medio < Difícil\n",
+    "\n",
+    "**Método seleccionado: Ordinal Encoding**\n",
+    "\n",
+    "**Justificación:**\n",
+    "1. Existe una **jerarquía clara** de dificultad creciente\n",
+    "2. Preserva la relación ordinal sin aumentar dimensionalidad\n",
+    "3. Los algoritmos de ML pueden aprovechar esta información ordinal para identificar tendencias\n",
+    "4. Más eficiente que One-Hot Encoding (1 columna vs 3 columnas)\n",
+    "\n",
+    "**Mapeo aplicado:**\n",
+    "- Fácil → 0\n",
+    "- Medio → 1\n",
+    "- Difícil → 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24ac10f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ NIVEL_DIFICULTAD codificado (Ordinal Encoding)\n",
+      "Valores únicos: [np.float64(0.0), np.float64(1.0), np.float64(2.0)]\n",
+      "Mapeo aplicado: Fácil=0, Medio=1, Difícil=2\n",
+      "\n",
+      "Distribución:\n",
+      "NIVEL_DIFICULTAD\n",
+      "0.0    313\n",
+      "1.0    504\n",
+      "2.0    183\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definir el orden de las categorías\n",
+    "categorias_orden = [['Fácil', 'Medio', 'Difícil']]\n",
+    "\n",
+    "# Crear y aplicar encoder\n",
+    "ordinal_encoder = OrdinalEncoder(categories=categorias_orden)\n",
+    "df['NIVEL_DIFICULTAD'] = ordinal_encoder.fit_transform(df[['NIVEL_DIFICULTAD']])\n",
+    "\n",
+    "print(\"✅ NIVEL_DIFICULTAD codificado (Ordinal Encoding)\")\n",
+    "print(f\"Valores únicos: {sorted(df['NIVEL_DIFICULTAD'].unique())}\")\n",
+    "print(f\"Mapeo aplicado: Fácil=0, Medio=1, Difícil=2\")\n",
+    "print(f\"\\nDistribución:\")\n",
+    "print(df['NIVEL_DIFICULTAD'].value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b998aa9",
+   "metadata": {},
+   "source": [
+    "### Binary Encoding - TIENE_TUTOR\n",
+    "\n",
+    "**Características de la variable:**\n",
+    "- **Tipo**: Categórica binaria\n",
+    "- **Categorías**: 2 (Sí, No)\n",
+    "- **Orden lógico**:  NO (es nominal binaria)\n",
+    "\n",
+    "**Método seleccionado: Binary Encoding (Label Encoding)**\n",
+    "\n",
+    "**Justificación:**\n",
+    "1. Es una **variable binaria** → solo necesita 1 columna\n",
+    "2. Mapeo simple y directo: No=0, Sí=1\n",
+    "3. Interpretación clara e intuitiva (0=sin tutor, 1=con tutor)\n",
+    "4. One-Hot Encoding generaría 2 columnas redundantes (innecesario)\n",
+    "\n",
+    "**Mapeo aplicado:**\n",
+    "- No → 0\n",
+    "- Sí → 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "386c1ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TIENE_TUTOR codificado (Binary Encoding)\n",
+      "Valores únicos: [np.int64(0), np.int64(1)]\n",
+      "Mapeo aplicado: No=0, Sí=1\n",
+      "\n",
+      "Distribución:\n",
+      "TIENE_TUTOR\n",
+      "0    597\n",
+      "1    403\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mapeo manual (más simple y claro que LabelEncoder)\n",
+    "df['TIENE_TUTOR'] = df['TIENE_TUTOR'].map({'No': 0, 'Sí': 1})\n",
+    "\n",
+    "print(\"TIENE_TUTOR codificado (Binary Encoding)\")\n",
+    "print(f\"Valores únicos: {sorted(df['TIENE_TUTOR'].unique())}\")\n",
+    "print(f\"Mapeo aplicado: No=0, Sí=1\")\n",
+    "print(f\"\\nDistribución:\")\n",
+    "print(df['TIENE_TUTOR'].value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70a7b7dd",
+   "metadata": {},
+   "source": [
+    "### One-Hot Encoding - HORARIO_ESTUDIO_PREFERIDO\n",
+    "\n",
+    "**Características de la variable:**\n",
+    "- **Tipo**: Categórica nominal\n",
+    "- **Categorías**: 4 (Mañana, Tarde, Noche, Desconocido)\n",
+    "- **Orden lógico**: NO\n",
+    "\n",
+    "**Método seleccionado: One-Hot Encoding**\n",
+    "\n",
+    "**Justificación:**\n",
+    "1. **No existe jerarquía natural** entre los horarios de estudio\n",
+    "2. Evita introducir relaciones numéricas artificiales (ej: Mañana < Tarde < Noche)\n",
+    "3. Solo 4 categorías → impacto moderado en dimensionalidad (aceptable)\n",
+    "4. Es el método **estándar** para variables nominales sin orden\n",
+    "5. Cada horario se trata como una característica independiente e igualmente válida\n",
+    "\n",
+    "**Resultado:** Se crean 4 columnas binarias (0/1), una por cada categoría"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "29dc2df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ HORARIO_ESTUDIO_PREFERIDO codificado (One-Hot Encoding)\n",
+      "Nuevas columnas creadas (4):\n",
+      "  - HORARIO_ESTUDIO_PREFERIDO_Desconocido\n",
+      "  - HORARIO_ESTUDIO_PREFERIDO_Mañana\n",
+      "  - HORARIO_ESTUDIO_PREFERIDO_Noche\n",
+      "  - HORARIO_ESTUDIO_PREFERIDO_Tarde\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear encoder\n",
+    "onehot_encoder = OneHotEncoder(drop=None, sparse_output=False, handle_unknown='ignore')\n",
+    "\n",
+    "# ===== HORARIO_ESTUDIO_PREFERIDO =====\n",
+    "encoded_horario = onehot_encoder.fit_transform(df[['HORARIO_ESTUDIO_PREFERIDO']])\n",
+    "\n",
+    "# Crear DataFrame con nombres descriptivos\n",
+    "encoded_horario_df = pd.DataFrame(\n",
+    "    encoded_horario,\n",
+    "    columns=onehot_encoder.get_feature_names_out(['HORARIO_ESTUDIO_PREFERIDO']),\n",
+    "    index=df.index\n",
+    ")\n",
+    "\n",
+    "# Concatenar y eliminar columna original\n",
+    "df = pd.concat([df, encoded_horario_df], axis=1)\n",
+    "df = df.drop('HORARIO_ESTUDIO_PREFERIDO', axis=1)\n",
+    "\n",
+    "print(\"✅ HORARIO_ESTUDIO_PREFERIDO codificado (One-Hot Encoding)\")\n",
+    "print(f\"Nuevas columnas creadas ({len(encoded_horario_df.columns)}):\")\n",
+    "for col in encoded_horario_df.columns:\n",
+    "    print(f\"  - {col}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ab433f3",
+   "metadata": {},
+   "source": [
+    "### One-Hot Encoding - ESTILO_APRENDIZAJE\n",
+    "\n",
+    "**Características de la variable:**\n",
+    "- **Tipo**: Categórica nominal\n",
+    "- **Categorías**: 4 (Visual, Auditivo, Kinestésico, Lectura/Escritura)\n",
+    "- **Orden lógico**: NO\n",
+    "\n",
+    "**Método seleccionado: One-Hot Encoding**\n",
+    "\n",
+    "**Justificación:**\n",
+    "1. **No hay jerarquía** entre los estilos de aprendizaje (todos son igualmente válidos)\n",
+    "2. Cada estilo representa una característica **independiente** del estudiante\n",
+    "3. Evita que el modelo asuma relaciones ordinales falsas\n",
+    "4. Con solo 4 categorías, el aumento de dimensionalidad es manejable\n",
+    "5. Permite que el modelo capture patrones específicos de cada estilo\n",
+    "\n",
+    "**Resultado:** Se crean 4 columnas binarias (0/1), una por cada estilo de aprendizaje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c6fe965d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ESTILO_APRENDIZAJE codificado (One-Hot Encoding)\n",
+      "Nuevas columnas creadas (4):\n",
+      "  - ESTILO_APRENDIZAJE_Auditivo\n",
+      "  - ESTILO_APRENDIZAJE_Kinestésico\n",
+      "  - ESTILO_APRENDIZAJE_Lectura/Escritura\n",
+      "  - ESTILO_APRENDIZAJE_Visual\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== ESTILO_APRENDIZAJE =====\n",
+    "encoded_estilo = onehot_encoder.fit_transform(df[['ESTILO_APRENDIZAJE']])\n",
+    "\n",
+    "# Crear DataFrame con nombres descriptivos\n",
+    "encoded_estilo_df = pd.DataFrame(\n",
+    "    encoded_estilo,\n",
+    "    columns=onehot_encoder.get_feature_names_out(['ESTILO_APRENDIZAJE']),\n",
+    "    index=df.index\n",
+    ")\n",
+    "\n",
+    "# Concatenar y eliminar columna original\n",
+    "df = pd.concat([df, encoded_estilo_df], axis=1)\n",
+    "df = df.drop('ESTILO_APRENDIZAJE', axis=1)\n",
+    "\n",
+    "print(\" ESTILO_APRENDIZAJE codificado (One-Hot Encoding)\")\n",
+    "print(f\"Nuevas columnas creadas ({len(encoded_estilo_df.columns)}):\")\n",
+    "for col in encoded_estilo_df.columns:\n",
+    "    print(f\"  - {col}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec61fbf9",
+   "metadata": {},
+   "source": [
+    "### Verificación final del encoding\n",
+    "\n",
+    "Comprobamos que:\n",
+    "-  No quedan variables categóricas tipo 'object'\n",
+    "-  El número de columnas es correcto (18 columnas)\n",
+    "-  Los valores codificados son correctos\n",
+    "-  No se introdujeron valores nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "42f580fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "VERIFICACIÓN FINAL DEL ENCODING\n",
+      "================================================================================\n",
+      "\n",
+      "✅ Variables categóricas restantes: 0\n",
+      "✅ Todas las variables categóricas fueron codificadas correctamente\n",
+      "\n",
+      "Shape final del dataset: (1000, 17)\n",
+      "Columnas antes del encoding: 11\n",
+      "Columnas después del encoding: 17\n",
+      "Nuevas columnas creadas: 6\n",
+      "\n",
+      "Tipos de datos finales:\n",
+      "float64    14\n",
+      "int64       3\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "================================================================================\n",
+      "LISTADO COMPLETO DE COLUMNAS\n",
+      "================================================================================\n",
+      " 1. HORAS_ESTUDIO_SEMANAL                              (float64)\n",
+      " 2. NOTA_ANTERIOR                                      (float64)\n",
+      " 3. TASA_ASISTENCIA                                    (float64)\n",
+      " 4. HORAS_SUENO                                        (float64)\n",
+      " 5. EDAD                                               (int64)\n",
+      " 6. NIVEL_DIFICULTAD                                   (float64)\n",
+      " 7. TIENE_TUTOR                                        (int64)\n",
+      " 8. NOTA_FINAL                                         (float64)\n",
+      " 9. APROBADO                                           (int64)\n",
+      "10. HORARIO_ESTUDIO_PREFERIDO_Desconocido              (float64)\n",
+      "11. HORARIO_ESTUDIO_PREFERIDO_Mañana                   (float64)\n",
+      "12. HORARIO_ESTUDIO_PREFERIDO_Noche                    (float64)\n",
+      "13. HORARIO_ESTUDIO_PREFERIDO_Tarde                    (float64)\n",
+      "14. ESTILO_APRENDIZAJE_Auditivo                        (float64)\n",
+      "15. ESTILO_APRENDIZAJE_Kinestésico                     (float64)\n",
+      "16. ESTILO_APRENDIZAJE_Lectura/Escritura               (float64)\n",
+      "17. ESTILO_APRENDIZAJE_Visual                          (float64)\n",
+      "\n",
+      "================================================================================\n",
+      "TESTS DE VERIFICACIÓN\n",
+      "================================================================================\n",
+      "No hay variables categóricas tipo 'object'\n",
+      "\n",
+      " ERROR: Número de columnas incorrecto: 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"VERIFICACIÓN FINAL DEL ENCODING\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# Verificar que no quedan variables categóricas\n",
+    "cat_restantes = df.select_dtypes(include='object').columns.tolist()\n",
+    "print(f\"\\n✅ Variables categóricas restantes: {len(cat_restantes)}\")\n",
+    "if len(cat_restantes) > 0:\n",
+    "    print(f\"⚠️ Columnas: {cat_restantes}\")\n",
+    "else:\n",
+    "    print(\"✅ Todas las variables categóricas fueron codificadas correctamente\")\n",
+    "\n",
+    "# Mostrar shape final\n",
+    "print(f\"\\nShape final del dataset: {df.shape}\")\n",
+    "print(f\"Columnas antes del encoding: 11\")\n",
+    "print(f\"Columnas después del encoding: {df.shape[1]}\")\n",
+    "print(f\"Nuevas columnas creadas: {df.shape[1] - 11}\")\n",
+    "\n",
+    "# Mostrar tipos de datos\n",
+    "print(\"\\nTipos de datos finales:\")\n",
+    "print(df.dtypes.value_counts())\n",
+    "\n",
+    "# Listar todas las columnas del dataset\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"LISTADO COMPLETO DE COLUMNAS\")\n",
+    "print(\"=\" * 80)\n",
+    "for i, col in enumerate(df.columns, 1):\n",
+    "    tipo = df[col].dtype\n",
+    "    print(f\"{i:2}. {col:50} ({tipo})\")\n",
+    "\n",
+    "# Tests de verificación\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"TESTS DE VERIFICACIÓN\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "try:\n",
+    "    assert df.select_dtypes(include='object').shape[1] == 0, \"Aún hay variables categóricas\"\n",
+    "    print(\"No hay variables categóricas tipo 'object'\")\n",
+    "    \n",
+    "    assert df.shape[1] == 18, f\"Número de columnas incorrecto: {df.shape[1]}\"\n",
+    "    print(\"Número correcto de columnas (18)\")\n",
+    "    \n",
+    "    assert set(df['NIVEL_DIFICULTAD'].unique()) == {0.0, 1.0, 2.0}, \"NIVEL_DIFICULTAD mal codificado\"\n",
+    "    print(\"NIVEL_DIFICULTAD correctamente codificado (0, 1, 2)\")\n",
+    "    \n",
+    "    assert set(df['TIENE_TUTOR'].unique()) == {0, 1}, \"TIENE_TUTOR mal codificado\"\n",
+    "    print(\"TIENE_TUTOR correctamente codificado (0, 1)\")\n",
+    "    \n",
+    "    assert df.isnull().sum().sum() == 0, \"Se introdujeron valores nulos\"\n",
+    "    print(\"No hay valores nulos\")\n",
+    "    \n",
+    "    print(\"\\nTODAS LAS VERIFICACIONES PASARON CORRECTAMENTE\")\n",
+    "    \n",
+    "except AssertionError as e:\n",
+    "    print(f\"\\n ERROR: {e}\")"
    ]
   },
   {
