--- a/02-preprocesamiento.ipynb
+++ b/02-preprocesamiento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "81bdae84",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from scr.explore_utils import null_analysis, column_type_dataframe"
    ]
@@ -836,30 +837,76 @@
    "source": [
     "## 5. Estandarización de las variables numéricas\n",
     "\n",
-    "### Plan de acción\n",
-    "La necesidad de escalado/normalización depende del tipo de modelo que se vaya a utilizar:\n",
+    "### Por qué NO se escala en este notebook\n",
+    "El escalado de variables es un paso fundamental en Machine Learning, pero debe aplicarse **DESPUÉS** de dividir el dataset en train y test para evitar **data leakage** (fuga de información).\n",
+    "---\n",
+    "### Problema del data leakage\n",
+    "```python\n",
+    "# INCORRECTO (genera data leakage):\n",
+    "scaler.fit_transform(todo_el_dataset)  # Calcula media/std de TODO el dataset\n",
+    "X_train, X_test = train_test_split(...)  # Luego divide\n",
+    "# → El test \"conoce\" estadísticas del train = FUGA DE INFORMACIÓN\n",
+    "# CORRECTO (sin data leakage):\n",
+    "X_train, X_test = train_test_split(...)  # Primero divide\n",
+    "scaler.fit(X_train)  # Scaler aprende SOLO de train\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)  # Aplica parámetros del train\n",
+    "```\n",
     "\n",
-    "**Modelos que REQUIEREN escalado:**\n",
-    "- Modelos basados en distancias: KNN, SVM\n",
-    "- Redes neuronales\n",
-    "- Modelos con regularización: Ridge, Lasso, Elastic Net\n",
-    "- Análisis de componentes principales (PCA)\n",
+    "### Método seleccionado: StandardScaler\n",
     "\n",
-    "**Modelos que NO requieren escalado:**\n",
-    "- Árboles de decisión\n",
-    "- Random Forest\n",
-    "- Gradient Boosting (XGBoost, LightGBM, CatBoost)\n",
-    "- Naive Bayes\n",
+    "**Transformación aplicada:**\n",
+    "## 5. Estandarización de variables numéricas (Feature Scaling)\n",
     "\n",
-    "**Métodos de escalado recomendados:**\n",
-    "- **StandardScaler** (media=0, std=1): Para distribuciones relativamente normales. Apropiado para la mayoría de nuestras variables numéricas según el EDA\n",
-    "- **MinMaxScaler** (rango 0-1): Si queremos mantener la interpretabilidad y el rango original\n",
-    "- **RobustScaler**: Si hay presencia de outliers (usa mediana e IQR en lugar de media y desviación estándar)\n",
+    "### Método seleccionado: StandardScaler\n",
+    "> z = (x - μ) / σ    \n",
     "\n",
-    "**Implementación**: \n",
-    "- Crear pipelines que permitan activar/desactivar el escalado según el modelo\n",
-    "- Aplicar el escalado SOLO después de dividir train/test para evitar data leakage\n",
-    "- Guardar los parámetros del scaler del conjunto de entrenamiento para aplicar la misma transformación al test"
+    "Donde:\n",
+    "- μ = media de la variable\n",
+    "- σ = desviación estándar\n",
+    "- z = valor estandarizado\n",
+    "\n",
+    "**Resultado:** Variables transformadas con media = 0 y desviación estándar = 1\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Justificación de la selección de StandardScaler\n",
+    "\n",
+    "| Criterio | Estado en nuestro dataset | Implicación para la elección |\n",
+    "|----------|---------------------------|------------------------------|\n",
+    "| **Distribución de variables** | Todas las variables numéricas tienen distribución aproximadamente normal (test Shapiro-Wilk) | StandardScaler es óptimo para datos con distribución normal |\n",
+    "| **Presencia de outliers severos** | Outliers ya gestionados en sección 3 (solo 1.3% del dataset) | No se requiere RobustScaler |\n",
+    "| **Rango de valores** | Variables en escalas muy diferentes (EDAD [18-29] vs NOTA_ANTERIOR [30-100]) | Necesario escalar para evitar que variables con mayor rango dominen |\n",
+    "| **Modelos a utilizar** | Regresión Logística, SVM, KNN (sensibles a escala) | Requieren estandarización |\n",
+    "| **Interpretabilidad** | Importante para análisis posterior | z-scores son fácilmente interpretables |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Comparación con alternativas\n",
+    "\n",
+    "| Método | Por qué NO se eligió para este dataset |\n",
+    "|--------|----------------------------------------|\n",
+    "| **MinMaxScaler** | Nuestras variables tienen distribución normal, no necesitamos rango [0,1]. Además es más sensible a outliers extremos |\n",
+    "| **RobustScaler** | Solo 1.3% de outliers ya corregidos. RobustScaler solo se justifica con alta presencia de outliers no corregibles |\n",
+    "\n",
+    "**Decisión:** StandardScaler es el método más apropiado dados nuestros datos con distribución normal y outliers mínimos\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Variables del dataset\n",
+    "\n",
+    "**Variables a estandarizar:**\n",
+    "- Variables numéricas originales: HORAS_ESTUDIO_SEMANAL, NOTA_ANTERIOR, TASA_ASISTENCIA, HORAS_SUENO, EDAD\n",
+    "- Variables codificadas: NIVEL_DIFICULTAD (0,1,2), TIENE_TUTOR (0,1)\n",
+    "- Variables One-Hot: HORARIO_*, ESTILO_*\n",
+    "\n",
+    "**Variables que NO se estandarizan:**\n",
+    "- NOTA_FINAL (variable objetivo para modelo de regresión)\n",
+    "- APROBADO (variable objetivo para modelo de clasificación)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**NOTA:** Esta estandarización es genérica. Los notebooks específicos de modelado (03-regresion.ipynb y 04-clasificacion.ipynb) aplicarán el escalado dentro de pipelines DESPUÉS de dividir train/test."
    ]
   },
   {
@@ -867,39 +914,197 @@
    "id": "ce441561",
    "metadata": {},
    "source": [
-    "## 6. Selección de variables (feature selection)\n",
+    "## 6. Verificación final y preparación de datasets\n",
     "\n",
-    "### Plan de acción\n",
-    "Según el EDA, se identificaron variables con baja o nula correlación con las variables objetivo:\n",
+    "### Estado final del dataset preprocesado\n",
     "\n",
-    "**Variables a considerar eliminar:**\n",
-    "- **EDAD**: \n",
-    "  - Correlación prácticamente nula (-0.01) con NOTA_FINAL\n",
-    "  - Sin diferencias significativas entre aprobados y suspendidos (ambos con mediana de 24 años)\n",
-    "  - Recomendación: Mantener inicialmente para validación, eliminar si no mejora el modelo\n",
-    "  \n",
-    "- **HORAS_SUENO**: \n",
-    "  - Correlación muy débil (0.07) con NOTA_FINAL\n",
-    "  - Sin diferencias significativas entre aprobados (mediana: 7.01) y suspendidos (mediana: 7.05)\n",
-    "  - Además tiene 15% de valores faltantes\n",
-    "  - Recomendación: Mantener inicialmente para validación, eliminar si no mejora el modelo\n",
+    "Resumen de transformaciones aplicadas:\n",
+    "1. Gestión de duplicados: 0 duplicados detectados\n",
+    "2. Gestión de nulos: 3 variables imputadas (HORAS_SUENO, HORARIO_ESTUDIO_PREFERIDO, ESTILO_APRENDIZAJE)\n",
+    "3. Gestión de outliers: Mantenidos (valores legítimos), TASA_ASISTENCIA corregida\n",
+    "4. Encoding: 4 variables categóricas → 11 columnas numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "efe53e4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "VERIFICACIÓN FINAL DEL DATASET PREPROCESADO\n",
+      "================================================================================\n",
+      "\n",
+      "Shape del dataset: (1000, 17)\n",
+      "Total registros: 1000\n",
+      "Total columnas: 17\n",
+      "\n",
+      "Valores nulos totales: 0\n",
+      "  [OK] No hay valores nulos\n",
+      "\n",
+      "Registros duplicados: 0\n",
+      "\n",
+      "Tipos de datos:\n",
+      "float64    14\n",
+      "int64       3\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Variables categóricas restantes: 0\n",
+      "  [OK] Todas las variables categóricas fueron codificadas\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "LISTADO COMPLETO DE COLUMNAS FINALES (17 columnas):\n",
+      "--------------------------------------------------------------------------------\n",
+      "   1. HORAS_ESTUDIO_SEMANAL                              (float64)\n",
+      "   2. NOTA_ANTERIOR                                      (float64)\n",
+      "   3. TASA_ASISTENCIA                                    (float64)\n",
+      "   4. HORAS_SUENO                                        (float64)\n",
+      "   5. EDAD                                               (int64)\n",
+      "   6. NIVEL_DIFICULTAD                                   (float64)\n",
+      "   7. TIENE_TUTOR                                        (int64)\n",
+      "   8. NOTA_FINAL                                         (float64)\n",
+      "   9. APROBADO                                           (int64)\n",
+      "  10. HORARIO_ESTUDIO_PREFERIDO_Desconocido              (float64)\n",
+      "  11. HORARIO_ESTUDIO_PREFERIDO_Mañana                   (float64)\n",
+      "  12. HORARIO_ESTUDIO_PREFERIDO_Noche                    (float64)\n",
+      "  13. HORARIO_ESTUDIO_PREFERIDO_Tarde                    (float64)\n",
+      "  14. ESTILO_APRENDIZAJE_Auditivo                        (float64)\n",
+      "  15. ESTILO_APRENDIZAJE_Kinestésico                     (float64)\n",
+      "  16. ESTILO_APRENDIZAJE_Lectura/Escritura               (float64)\n",
+      "  17. ESTILO_APRENDIZAJE_Visual                          (float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=\" * 80)\n",
+    "print(\"VERIFICACIÓN FINAL DEL DATASET PREPROCESADO\")\n",
+    "print(\"=\" * 80)\n",
     "\n",
-    "**Variables a mantener** (alta predictividad):\n",
-    "- **HORAS_ESTUDIO_SEMANAL**: Correlación 0.51 con NOTA_FINAL, diferencia de 5.17 horas entre aprobados/suspendidos\n",
-    "- **NOTA_ANTERIOR**: Correlación 0.47 con NOTA_FINAL, diferencia de 12.49 puntos entre aprobados/suspendidos\n",
-    "- **TASA_ASISTENCIA**: Correlación 0.32 con NOTA_FINAL, diferencia de 14.44 puntos porcentuales\n",
-    "- **TIENE_TUTOR**: Diferencia de 10 puntos porcentuales en tasa de aprobado\n",
-    "- **Todas las variables categóricas**: Muestran impacto en los objetivos según el EDA\n",
+    "# Información general\n",
+    "print(f\"\\nShape del dataset: {df.shape}\")\n",
+    "print(f\"Total registros: {df.shape[0]}\")\n",
+    "print(f\"Total columnas: {df.shape[1]}\")\n",
     "\n",
-    "**Feature Engineering - Interacciones sugeridas:**\n",
-    "- `HORAS_ESTUDIO_SEMANAL × TIENE_TUTOR`: ¿El tutor multiplica el efecto de las horas de estudio?\n",
-    "- `NOTA_ANTERIOR × NIVEL_DIFICULTAD`: ¿La dificultad percibida modera el efecto de la nota anterior?\n",
-    "- `TASA_ASISTENCIA × HORAS_ESTUDIO_SEMANAL`: Efecto sinérgico de asistencia y estudio\n",
+    "# Verificar valores nulos\n",
+    "print(f\"\\nValores nulos totales: {df.isnull().sum().sum()}\")\n",
+    "if df.isnull().sum().sum() == 0:\n",
+    "    print(\"  [OK] No hay valores nulos\")\n",
+    "else:\n",
+    "    print(\"  [ADVERTENCIA] Aún hay valores nulos:\")\n",
+    "    print(df.isnull().sum()[df.isnull().sum() > 0])\n",
     "\n",
-    "**Implementación**: \n",
-    "- Probar modelos con y sin EDAD y HORAS_SUENO para comparar rendimiento\n",
-    "- Crear features de interacción para las combinaciones sugeridas\n",
-    "- Usar técnicas de selección de features (SelectKBest, Recursive Feature Elimination) si el número de features crece significativamente"
+    "# Verificar duplicados\n",
+    "print(f\"\\nRegistros duplicados: {df.duplicated().sum()}\")\n",
+    "\n",
+    "# Verificar tipos de datos\n",
+    "print(f\"\\nTipos de datos:\")\n",
+    "print(df.dtypes.value_counts())\n",
+    "\n",
+    "# Verificar variables categóricas restantes\n",
+    "cat_cols = df.select_dtypes(include='object').columns.tolist()\n",
+    "print(f\"\\nVariables categóricas restantes: {len(cat_cols)}\")\n",
+    "if len(cat_cols) == 0:\n",
+    "    print(\"  [OK] Todas las variables categóricas fueron codificadas\")\n",
+    "else:\n",
+    "    print(f\"  [ADVERTENCIA] Columnas categóricas: {cat_cols}\")\n",
+    "\n",
+    "# Listar todas las columnas\n",
+    "print(f\"\\n{'-' * 80}\")\n",
+    "print(\"LISTADO COMPLETO DE COLUMNAS FINALES ({} columnas):\".format(df.shape[1]))\n",
+    "print(f\"{'-' * 80}\")\n",
+    "for i, col in enumerate(df.columns, 1):\n",
+    "    dtype = df[col].dtype\n",
+    "    print(f\"  {i:2}. {col:50} ({dtype})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b62fae54",
+   "metadata": {},
+   "source": [
+    "### Descripción del dataset final\n",
+    "\n",
+    "**Columnas numéricas originales (5):**\n",
+    "- HORAS_ESTUDIO_SEMANAL\n",
+    "- NOTA_ANTERIOR\n",
+    "- TASA_ASISTENCIA\n",
+    "- HORAS_SUENO (imputada con mediana)\n",
+    "- EDAD\n",
+    "\n",
+    "**Columnas codificadas (2):**\n",
+    "- NIVEL_DIFICULTAD (Ordinal: 0=Fácil, 1=Medio, 2=Difícil)\n",
+    "- TIENE_TUTOR (Binary: 0=No, 1=Sí)\n",
+    "\n",
+    "**Columnas One-Hot Encoding (8):**\n",
+    "- HORARIO_ESTUDIO_PREFERIDO_* (4 columnas: Desconocido, Mañana, Noche, Tarde)\n",
+    "- ESTILO_APRENDIZAJE_* (4 columnas: Auditivo, Kinestésico, Lectura/Escritura, Visual)\n",
+    "\n",
+    "**Variables objetivo (2):**\n",
+    "- NOTA_FINAL (regresión)\n",
+    "- APROBADO (clasificación)\n",
+    "\n",
+    "**Total: 18 columnas**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da769e69",
+   "metadata": {},
+   "source": [
+    "### Guardado de datasets para modelado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "00484881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "DATASET GUARDADO\n",
+      "================================================================================\n",
+      "\n",
+      "Archivo: files/processed\\dataset_preprocesado.csv\n",
+      "Registros: 1000\n",
+      "Columnas: 17\n",
+      "\n",
+      "Este dataset está listo para ser usado en:\n",
+      "  - 03-regresion.ipynb (predicción de NOTA_FINAL)\n",
+      "  - 04-clasificacion.ipynb (predicción de APROBADO)\n",
+      "\n",
+      "El escalado se aplicará en cada notebook específico dentro de pipelines\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Crear directorio de salida si no existe\n",
+    "output_dir = 'files/processed'\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "# Guardar dataset completo preprocesado\n",
+    "output_file = os.path.join(output_dir, 'dataset_preprocesado.csv')\n",
+    "df.to_csv(output_file, index=False)\n",
+    "\n",
+    "print(\"=\" * 80)\n",
+    "print(\"DATASET GUARDADO\")\n",
+    "print(\"=\" * 80)\n",
+    "print(f\"\\nArchivo: {output_file}\")\n",
+    "print(f\"Registros: {len(df)}\")\n",
+    "print(f\"Columnas: {df.shape[1]}\")\n",
+    "print(\"\\nEste dataset está listo para ser usado en:\")\n",
+    "print(\"  - 03-regresion.ipynb (predicción de NOTA_FINAL)\")\n",
+    "print(\"  - 04-clasificacion.ipynb (predicción de APROBADO)\")\n",
+    "print(\"\\nEl escalado se aplicará en cada notebook específico dentro de pipelines\")"
    ]
   },
   {
